# wechatdocs

./: .gitignore  README.md  app.py  pyproject.toml
resource/: 0a933e78-da5a-4d88-9f3e-5abd9747d250.pkl  contract.txt
tests/: chat.py  testDocSummary.py  testSummaryText.py  test_clear_st_text.py  test_doc_summary.py  test_summary_text.py
wechatdocs/callbacks/: streamlit.py
wechatdocs/search/: search.py
wechatdocs/store/: store_pdf.py
wechatdocs/summary/: summaryText.py  summary_text.py
